--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    
+    <h1> this is a test!</h1>
+    <h2> Hey Justin!</h2>
     </body>
 </html>
